# opengl_app

./: .gitignore  CMakeLists.txt
include/: header.h
lib/: libGLEW.so.2.2.0  libglfw.so.3.4
src/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  DynamicModel.cpp  Entity.cpp  Entity.hpp  Model.cpp  Model.hpp  Path.cpp  Path.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  StaticModel.cpp  app.cpp
src/glsl/: geometry.glsl  terrainFragment.glsl  terrainVertex.glsl
